PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5 RC 1
- Fixed bug #26675 (Segfault on ArrayAccess use). (Marcus)

21 Dec 2003, PHP 5 Beta 3
- Bundled new tidy extension (John, Wez)
- Upgraded PCRE library to version 4.5. (Andrei)
- Dropped Windows 95 support. (Andi)
- Moved extensions to PECL:
  . ext/crack (Jani, Derick)
  . ext/db (Jani, Derick)
  . ext/mcal (Jani, Derick)
  . ext/qtdom (Jani, Derick)
  . ext/notes (Wez)
- Added 'c' modifier to date() which returns the date in the ISO 8601 format.
  (Derick, Manuzhai)
- Added an optional parameter to microtime() to get the time as float. (Andrey)
- Added MacRoman encoding support to htmlentities(). (Derick, Marcus Bointon)
- Added possibility to call PHP functions as XSLT-functions. (Christian)
- Added possibility to prevent PHP from registering variables when input filter
  support is used. (Derick)
- Added iconv stream filter (convert.iconv.*). (Moriyoshi)
- Added EXSLT support in ext/xsl. (Christian)
- Added qdbm handler for dba extension. (mg at iceni dot pl, Marcus)
- Added new functions:
  . dba_key_split() to split inifile keys in an array. (Marcus)
  . time_nanosleep() signal safe sleep (Magnus, Ilia)
  . headers_list(). (Sara)
  . php_strip_whitespace(). strip whitespace & comments from a script. (Ilia)
  . php_check_syntax(). check php script for parse errors. (Ilia)
  . image_type_to_extension(). return extension based on image type. (Ilia)
  . stream_socket_sendto() and stream_socket_recvfrom(). (Wez)
  . iconv_mime_decode_headers(). (Moriyoshi)
  . get_declared_interfaces(). (Andrey, Marcus)
  . sqlite_fetch_column_types(). (Ilia)
- Added proxy support to http:// wrapper. (Sara)
- Added rename(), rmdir() and mkdir() support to userstreams. (Sara)
- Added rename(), rmdir() and mkdir() support to ftp:// wrapper. (Sara)