@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5 RC 1
+- Fixed bug #26690 (make xsltProcessor->transformToUri use streams wrappers).
+  (Ilia)
 - Fixed bug #26675 (Segfault on ArrayAccess use). (Marcus)
 
 21 Dec 2003, PHP 5 Beta 3
